--- a/index.html
+++ b/index.html
@@ -37,6 +37,65 @@
     <main>
         <h2>About Me</h2>
         <p>Hello! I'm a simple website created using HTML.</p>
+<!-- Image Carousel -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Carousel with Captions</title>
+    
+    <!-- Include Slick Carousel CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
+
+    <!-- Include jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Include Slick Carousel JS -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    
+    <!-- Your custom styles -->
+    <style>
+        .slick-slider {
+            width: 80%; /* Adjust the width as needed */
+            margin: 0 auto;
+        }
+        .slick-slide img {
+            width: 100%;
+            height: auto;
+        }
+        .slick-caption {
+            text-align: center;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="slick-slider">
+        <div>
+            <img src="image1.jpg" alt="Image 1">
+            <div class="slick-caption">Caption for Image 1</div>
+        </div>
+        <div>
+            <img src="image2.jpg" alt="Image 2">
+            <div class="slick-caption">Caption for Image 2</div>
+        </div>
+        <div>
+            <img src="image3.jpg" alt="Image 3">
+            <div class="slick-caption">Caption for Image 3</div>
+        </div>
+    </div>
+
+    <!-- Initialize Slick Carousel -->
+    <script>
+        $(document).ready(function(){
+            $('.slick-slider').slick({
+                dots: true, // Display navigation dots
+                appendDots: $('.slick-slider'), // Display dots below the slider
+                dotsClass: 'slick-dots'
+            });
+        });
+    </script>
+</body>
     </main>
     <footer>
         &copy; 2023 My Simple Website. All rights reserved.
