Images for Carousel

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 <body>
     <div class="slick-slider">
         <div>
-            <img src="image1.jpg" alt="Image 1">
-            <div class="slick-caption">Caption for Image 1</div>
+            <img src="Images\Carousel\AwardPresent.jpg" alt="Image 1">
+            <div class="slick-caption">The Co-Sovereigns presenting the Royal Order of the Sovereigns</div>
         </div>
         <div>
-            <img src="image2.jpg" alt="Image 2">
-            <div class="slick-caption">Caption for Image 2</div>
+            <img src="Images\Carousel\CoronationDrinks.jpg" alt="Image 2">
+            <div class="slick-caption">Drinks at the coronation of Co-Sovereigns</div>
         </div>
         <div>
             <img src="image3.jpg" alt="Image 3">
