--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                 appendDots: $('.slick-slider'), // Display dots below the slider
                 dotsClass: 'slick-dots'
             });
+			$('.autoplay').slick({
+				slidesToShow: 3,
+				slidesToScroll: 1,
+				autoplay: true,
+				autoplaySpeed: 2000,
+			});
         });
     </script>
 </body>
