--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -93,11 +94,30 @@
                 appendDots: $('.slick-slider'), // Display dots below the slider
                 dotsClass: 'slick-dots'
             });
-			$('.autoplay').slick({
-				slidesToShow: 3,
-				slidesToScroll: 1,
-				autoplay: true,
-				autoplaySpeed: 2000,
+			$('.center').slick({
+				centerMode: true,
+				centerPadding: '60px',
+				 slidesToShow: 3,
+				 responsive: [
+				{
+				  breakpoint: 768,
+				  settings: {
+					arrows: false,
+					centerMode: true,
+					centerPadding: '40px',
+					slidesToShow: 3
+				  }
+				},
+				{
+				  breakpoint: 480,
+				  settings: {
+					arrows: false,
+					centerMode: true,
+					centerPadding: '40px',
+					slidesToShow: 1
+				  }
+				}
+			  ]
 			});
         });
     </script>
