--- a/index.html
+++ b/index.html
@@ -89,11 +89,6 @@
     <!-- Initialize Slick Carousel -->
     <script>
         $(document).ready(function(){
-            $('.slick-slider').slick({
-                dots: true, // Display navigation dots
-                appendDots: $('.slick-slider'), // Display dots below the slider
-                dotsClass: 'slick-dots'
-            });
 			$('.center').slick({
 				centerMode: true,
 				centerPadding: '60px',
@@ -124,7 +119,7 @@
 </body>
     </main>
     <footer>
-        &copy; 2023 My Simple Website. All rights reserved.
+        &copy; 2023 Government of Northwood-Oregon. All rights reserved.
     </footer>
 </body>
 </html>
