--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
     <!-- Your custom styles -->
     <style>
         .slick-slider {
-            width: 40%; /* Adjust the width as needed */
-            margin: 0 auto;
-        }
+			width: 80%; /* Set the desired width */
+			margin: 0 auto; /* Center horizontally using margin */
+		}
+
         .slick-slide img {
             width: 50%;
             height: auto;
