--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
             <div class="slick-caption">Drinks at the coronation of Co-Sovereigns</div>
         </div>
         <div>
-            <img src="image3.jpg" alt="Image 3">
-            <div class="slick-caption">Caption for Image 3</div>
+            <img src="Images\Carousel\DodgeballTeam.jpg" alt="Image 2">
+            <div class="slick-caption">Northwood-Oregon's dodgeball team</div>
+        </div>
+		<div>
+            <img src="Images\Carousel\VilleToad.jpg" alt="Image 2">
+            <div class="slick-caption">The Ville de l'ombre toad</div>
         </div>
     </div>
 
